pkg/topology/state/fixtures/ingress-route/ingress-route-one-internal-traefik-service.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: name
  namespace: ns
spec:
  entryPoints:
    - web

  routes:
    - kind: Rule
      match: Host(`api.localhost`)
      services:
        - name: api@internal
          kind: TraefikService
