pkg/topology/state/fixtures/ingress-route/ingress-route-one-mirroring-traefik-service.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: name
  namespace: ns
spec:
  entryPoints:
    - web

  routes:
    - match: Host(`foo.com`)
      kind: Rule
      services:
        - name: traefik-service
          namespace: ns2
          kind: TraefikService

  tls:
    secretName: secret
    domains:
      - main: foo.com
        sans:
          - bar.foo.com

---
apiVersion: traefik.containo.us/v1alpha1
kind: TraefikService
metadata:
  name: traefik-service
  namespace: ns2

spec:
  mirroring:
    name: service1
    port: 80
