pkg/topology/state/fixtures/ingress-route/ingress-route-one-service.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: name
  namespace: ns
spec:
  entryPoints:
    - web

  routes:
    - match: Host(`foo.com`)
      kind: Rule
      services:
        - name: service
          port: 80

  tls:
    secretName: secret
    domains:
      - main: foo.com
        sans:
          - bar.foo.com
