pkg/topology/state/fixtures/ingress-route/ingress-route-two-mirroring-traefik-service.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: name
  namespace: ns
spec:
  entryPoints:
    - web

  routes:
    - match: Host(`foo.com`)
      kind: Rule
      services:
        - name: traefik-service1
          namespace: ns2
          kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: TraefikService
metadata:
  name: traefik-service1
  namespace: ns2

spec:
  mirroring:
    name: traefik-service2
    kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: TraefikService
metadata:
  name: traefik-service2
  namespace: ns2

spec:
  mirroring:
    name: service
    port: 80
